istio/ambient/waypoint/istio/dumps/waypoint-1.26.route.yaml
- name: default
  virtualHosts:
  - domains:
    - '*'
    name: default
    routes:
    - match:
        connectMatcher: {}
      route:
        cluster: main_internal
        upgradeConfigs:
        - connectConfig: {}
          upgradeType: CONNECT
- virtualHosts:
  - domains:
    - '*'
    name: backend
    routes:
    - match:
        prefix: /healthz/ready
      route:
        cluster: agent
- name: inbound-vip|8000|http|httpbin.ambient.svc.cluster.local
  validateClusters: false
  virtualHosts:
  - domains:
    - '*'
    name: inbound|http|8000
    routes:
    - decorator:
        operation: httpbin.ambient.svc.cluster.local:8000/*
      match:
        caseSensitive: true
        pathSeparatedPrefix: /get
      metadata:
        filterMetadata:
          istio:
            config: /apis/networking.istio.io/v1/namespaces/ambient/virtual-service/httpbin-0-istio-autogenerated-k8s-gateway
      name: ambient.httpbin.0
      route:
        cluster: inbound-vip|8000|http|httpbin.ambient.svc.cluster.local
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        maxGrpcTimeout: 0s
        retryPolicy:
          hostSelectionRetryMaxAttempts: "5"
          numRetries: 2
          retryHostPredicate:
          - name: envoy.retry_host_predicates.previous_hosts
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
          retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
        timeout: 0s
- virtualHosts:
  - domains:
    - '*'
    name: backend
    routes:
    - match:
        prefix: /stats/prometheus
      route:
        cluster: prometheus_stats
- name: encap
  validateClusters: false
  virtualHosts:
  - domains:
    - '*'
    name: inbound|http|0
    routes:
    - decorator:
        operation: :0/*
      match:
        prefix: /
      name: default
      route:
        cluster: encap
        maxStreamDuration:
          grpcTimeoutHeaderMax: 0s
          maxStreamDuration: 0s
        retryPolicy:
          numRetries: 2
          retryOn: reset-before-request
        timeout: 0s
- name: inbound-vip|8000|http|httpbin.not-ambient.svc.cluster.local
  validateClusters: false
  virtualHosts:
  - domains:
    - '*'
    name: inbound|http|8000
    routes:
    - decorator:
        operation: httpbin.not-ambient.svc.cluster.local:8000/*
      match:
        caseSensitive: true
        prefix: /
      metadata:
        filterMetadata:
          istio:
            config: /apis/networking.istio.io/v1/namespaces/ambient/virtual-service/httpbin-notambient-0-istio-autogenerated-k8s-gateway
      name: ambient.httpbin-notambient.0
      route:
        cluster: inbound-vip|8000|http|httpbin.not-ambient.svc.cluster.local
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        maxGrpcTimeout: 0s
        retryPolicy:
          hostSelectionRetryMaxAttempts: "5"
          numRetries: 2
          retryHostPredicate:
          - name: envoy.retry_host_predicates.previous_hosts
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate
          retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
        timeout: 0s
